--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ cabal.project.local~
 .ghc.environment.*
 
 # End of https://www.toptal.com/developers/gitignore/api/haskell
+
+*.log
+*.tex
+*.pdf
