--- a/csheet.cabal
+++ b/csheet.cabal
@@ -14,7 +14,7 @@ cabal-version:       >=1.10
 extra-source-files:  README.md
 
 executable csheet
-  hs-source-dirs:      src
+  hs-source-dirs:      src/csheet
   main-is:             Main.hs
   other-modules:       DataTypes
                      , Fonts
@@ -23,5 +23,20 @@ executable csheet
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson
+                     , aeson-better-errors
                      , bytestring
                      , HPDF
+                     , text
+
+executable spell
+  hs-source-dirs:      src/spell
+  main-is:             Main.hs
+  other-modules:       SpellData
+  --                    , Fonts
+  --                    , Pages
+  --                    , Utilities
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+                     , containers
+                     , directory
+                     , text
