--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: cabal update
+      - run: pwd
       - run: cabal build cexe
       - run: cabal exec cexe -- -j characters/strahd/dennis/dennis.5.json -p output/dennis.5.pdf
