--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - run: cabal update
       - run: pwd
+      - run: ls -l
       - run: cabal build cexe
       - run: cabal exec cexe -- -j characters/strahd/dennis/dennis.5.json -p output/dennis.5.pdf
