--- a/csheet.cabal
+++ b/csheet.cabal
@@ -16,6 +16,7 @@ library clib
   exposed-modules:     DataTypes
                      , Fonts
                      , Pages
+                     , Spells
                      , Utilities
   default-language:    Haskell2010
   build-depends:       base 
