--- a/csheet.cabal
+++ b/csheet.cabal
@@ -51,3 +51,4 @@ executable cexe
                      , network-uri
                      , optparse-applicative
                      , text
+                     , yaml
